<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_mt"
    app:cardCornerRadius="@dimen/cardview_corner_radius"
    app:cardElevation="@dimen/cardview_elevation"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="@dimen/event_card_padding">

        <!-- Immagine dell'evento -->
        <ImageView
            android:id="@+id/imageViewEvent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_image_height"
            android:scaleType="centerCrop"
            android:contentDescription="@string/event_image"
            android:background="@drawable/rounded_corners_gray"/>

        <!-- Nome evento -->
        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/textview_text_size"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/detail_textview_mt"
            android:text="@string/detail_event_title" />

        <!-- Data -->
        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_event_date"
            android:textSize="@dimen/detail_subtitle_text_size"
            android:textColor="@color/gray_dark"
            android:layout_marginTop="@dimen/detail_subtitle_mt" />

        <!-- Luogo -->
        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_event_city"
            android:textSize="@dimen/detail_subtitle_text_size"
            android:textColor="@color/gray_dark"
            android:layout_marginTop="@dimen/switch_mt" />

        <!-- HINT PER DETTAGLI -->
        <TextView
            android:id="@+id/textDetailsHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_event_view_details"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="@dimen/detail_view_detail"
            android:layout_marginTop="@dimen/layout_mt"
            android:layout_marginBottom="@dimen/layout_margin_end"/>

        <!-- EVENTO PASSATO -->
        <TextView
            android:id="@+id/textExpired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_expired"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_marginTop="@dimen/layout_margin_end"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
