<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/linear_layout_padding">

        <TextView
            android:id="@+id/titleFavorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_title"
            android:textSize="@dimen/favorite_title_size"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="@dimen/favorite_title_pb" />

        <!-- Switch per ordinamento -->
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchOrderByDate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/switch_height"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/switch_mt"
            android:checked="false"
            android:text="@string/switch_date"
            android:textColor="@color/black" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchFutureOnlyFavorites"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/switch_height"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/switch_mt"
            android:text="@string/switch_future"
            android:textColor="@color/black" />

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFavorites"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@dimen/favorite_weight" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/layout_margin"
        android:contentDescription="@string/back_btn"
        android:src="@drawable/back_icon"
        android:tint="@color/white"
        app:backgroundTint="@color/colorPrimary" />
</FrameLayout>
