<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    android:background="@android:color/white"
    android:padding="@dimen/constraint_padding">

    <EditText
        android:id="@+id/editCity"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:hint="@string/city_placeholder"
        android:inputType="textCapWords"
        android:padding="@dimen/editext_padding"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editDate"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_mt"
        android:background="@drawable/edittext_background"
        android:hint="@string/date_placeholder"
        android:inputType="none"
        android:focusable="false"
        android:clickable="true"
        android:padding="@dimen/editext_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonReset"
        app:layout_constraintTop_toBottomOf="@id/editCity"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/layout_margin_start"
        android:backgroundTint="@color/red"

        android:text="@string/button_delete"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/editDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/editDate"
        app:layout_constraintBottom_toBottomOf="@id/editDate"/>

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/button_box_height"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/layout_mt"
        app:layout_constraintTop_toBottomOf="@id/editDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFetch"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight"
            android:text="@string/button_search"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginEnd="@dimen/layout_margin_end"
            android:fontFamily="@font/gg_sans_bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOpenMap"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/layout_weight"
            android:text="@string/button_map"
            android:textAllCaps="false"
            app:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/layout_margin_horizontal"
            android:fontFamily="@font/gg_sans_bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFavorites"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal"
            android:layout_weight="@dimen/layout_weight"
            android:text="@string/button_favorite"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/colorAccent" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchFutureOnly"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="@dimen/switch_mt"
        android:text="@string/switch_future"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsContainer" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/switchFutureOnly"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/layout_mt"/>

    <TextView
        android:id="@+id/textNoEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cards_default"
        android:textSize="@dimen/cardview_text_size"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/layout_mt"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/recycler_height"
        android:paddingTop="@dimen/recycler_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNoEvents" />

    <TextView
        android:id="@+id/textFallbackMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_mt"
        android:text="@string/empty"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="italic"
        android:textSize="@dimen/cardview_text_size"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/textNoEvents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
